# fsextra

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
benches/: digest_bench.rs
src/: lib.rs
src/crypto/: mod.rs
src/crypto/digest/: mod.rs  sha2.rs  sha5.rs
src/crypto/digest/legacy/: mod.rs
src/extensions/: file.rs  metadata.rs  mod.rs
src/extensions/tests/: file_crypto_tests.rs  metadata_tests.rs  mod.rs
src/generics/: bound_by.rs  mod.rs
src/os/win/: mod.rs
test_data/: digest_tests.json  oswin_executable_tests.json  unix_executable_tests.json
tests/: digest.rs  digest_legacy.rs  os_win.rs  unix.rs
tests/common/: mod.rs
