[package]
name = "fsextra"
version = "0.0.1"
edition = "2018"
authors = ["Michael Palmer <michaelpalmer53@gmail.com>"]
repository = "https://github.com/isolated-/fsextra"
description = "fsextra is a collection of methods designed to reduce the complexity of performing cryptographic operations on files and directories."
license = "MIT"
keywords = ["filesystem", "unix", "cryptographic", "encryption"]
categories = ["cryptography", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
