[package]
name = "fsextra"
version = "0.2.0"
edition = "2018"
authors = ["Michael Palmer <michaelpalmer53@gmail.com>"]
repository = "https://github.com/isolated-/fsextra"
description = "fsextra is a collection of extensions to simplify working with Unix-based filesystems. With support for cryptographic operations (encryption, hashing)"
license = "MIT"
keywords = ["filesystem", "unix", "cryptographic", "encryption"]
categories = ["cryptography", "os"]

[features]
crypto = ["ring"]

[dependencies]
ring = { version = "0.16.20", optional = true }

[dev-dependencies]
hex = "0.4.0"